--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <span id="countdown_div"></span>
         
     </div>
+    <hr>
     <script src="chartist/chartist.min.js"></script>
+    <script src="bower_components/chartist-plugin-pointlabels/dist/chartist-plugin-pointlabels.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
